<resources>
    <string name="app_name">RemoteButtons</string>
    <string name="current_device">Current device</string>
    <string name="select">Select</string>
    <string name="remove">Remove</string>
    <string name="select_device_label">Select device</string>
    <string name="cancel">Cancel</string>
    <string name="commands_history">Commands history</string>
    <string name="remote_buttons_notify_title">Remote buttons</string>
    <string name="remote_buttons_notify_text">Remote buttons for android multimedia</string>
    <string name="driver_not_found">Driver not found for remote buttons device</string>
    <string name="open_connection_permissions_denied">Connection to remote buttons device failed: permission denied</string>
    <string name="open_connection_failed">Connection to remote buttons device failed: open failed</string>
    <string name="unsupported_serial_port_parameters">Unsupported parameters for serial port</string>
    <string name="not_enough_ports_at_device">Connection to remote buttons device failed: not enough ports at device</string>
    <string name="successful_connect">Successful connected to the remote buttons device</string>
    <string name="disconnect">Disconnect from the remote buttons device</string>
    <string name="failed_connect">Connection to remote buttons device failed: </string>
    <string name="about">About</string>
    <string name="no_device">no device</string>
    <string name="ok">OK</string>
    <string name="about_message">Author: mcrn21\nDescription: Remote buttons for control media players\nVersion: 24.04\nRepository: <a href="https://github.com/mcrn21/RemoteButtons">github</a></string>
    <string name="connection_parameters_preference">Serial port connection parameters</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="baud_rate_descr">Communication speed</string>
    <string name="data_bits">Data Bits</string>
    <string name="data_bits_descr">Number of bits to represent one character of data</string>
    <string name="parity">Parity</string>
    <string name="parity_descr">Parity bit type</string>
    <string name="stop_bits">Stop Bits</string>
    <string name="stop_bits_descr">Pattern of bits that indicates the end of a character</string>
    <string name="save">Save</string>
    <string name="connection_settings">Connection settings</string>
    <string name="select_app">Select app</string>
    <string name="clear_history">Clear history</string>
    <string name="remove_device">Remove device</string>
    <string name="settings_device">Settings device</string>
    <string name="launch_app">Launch app</string>
    <string name="launch_app_descr">Launch app by right down button</string>

    <string-array name="baud_rate_list">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>14400</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
    </string-array>

    <string-array name="data_bits_list">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="parity_list">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
        <item>Mark</item>
        <item>Space</item>
    </string-array>

    <string-array name="parity_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="stop_bits_list">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
    </string-array>

    <string-array name="stop_bits_list_values">
        <item>1</item>
        <item>3</item>
        <item>2</item>
    </string-array>

</resources>

